--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eid sale</title>
+    <title>Eid sale</title>   
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.9.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
-    
+    <header>
+        <!-- banner section related html  -->
+        <div class="bg-yellow-50 flex px-20 py-10 justify-center items-center">
+            <div class="flex-1 text-center">
+                <p class="font-medium text-3xl text-black">---SALE FEVER---</p>
+                <h1 class="font-bold text-6xl w-3/4 text-black justify-center mx-auto my-8">Purchase TK 200 or above & get <span class="text-pink-500">20% off</span></h1>
+                <div class="flex justify-center gap-5 items-center">
+                    <p class="font-medium text-2xl text-black">Use Promo Code</p>
+                    <button class="btn btn-primary bg-pink-500 hover:bg-pink-600 hover:ring focus:bg-pink-700 ring-pink-300 border-none">SELL200</button>
+                </div>
+            </div>
+            <div class="flex-1">
+                <img src="images/Summer 1.png" alt="">
+            </div>
+
+        </div>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
 </html>
